ux: fix blurry svg text
I was using stroke where I meant to be using fill. Derp.

Refs: https://stackoverflow.com/questions/18900118/svg-text-is-poor-quality

--- a/src/components/ReportCard/styles.module.css
+++ b/src/components/ReportCard/styles.module.css
@@ -38,11 +38,12 @@
 }
 
 .pgsLabel {
-    stroke: #332c2cbf;
+    fill: #272525;
+    font-weight: 400;
 }
 
 .dateLabel {
-    stroke: #afafaf;
+    fill: #292929;
 }
 
 @keyframes pulsating-skeleton2 {
